# bashlist_cli

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
bashlist/: __init__.py  __main__.py  bashlist.py  cli.py  config.py  database.py
