[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bashlist"
authors = [{name = "Oluwaseun", email = "tanimolaoluwaseun70@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]


[project.urls]
Home = "https://github.com/Oluwaseun241/bashlist_cli"

[project.scripts]
bashlist_cli = "bashlist.__main__:main"